make as product version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,195 +31,195 @@
 # Utility
 --------------------------------------------------------------*/
 .mt-20 {
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
 
 .mt-30 {
-  margin-top: 30px;
+  margin-top: 30px !important;
 }
 
 .mt-40 {
-  margin-top: 40px;
+  margin-top: 40px !important;
 }
 
 .mt-50 {
-  margin-top: 50px;
+  margin-top: 50px !important;
 }
 
 .mt-60 {
-  margin-top: 60px;
+  margin-top: 60px !important;
 }
 
 .mt-80 {
-  margin-top: 80px;
+  margin-top: 80px !important;
 }
 
 .mt-120 {
-  margin-top: 120px;
+  margin-top: 120px !important;
 }
 
 .mt--60 {
-  margin-top: -60px;
+  margin-top: -60px !important;
 }
 
 .mt--120 {
-  margin-top: -120px;
+  margin-top: -120px !important;
 }
 
 .mb-20 {
-  margin-bottom: 20px;
+  margin-bottom: 20px !important;
 }
 
 .mb-30 {
-  margin-bottom: 30px;
+  margin-bottom: 30px !important;
 }
 
 .mb-40 {
-  margin-bottom: 40px;
+  margin-bottom: 40px !important;
 }
 
 .mb-50 {
-  margin-bottom: 50px;
+  margin-bottom: 50px !important;
 }
 
 .mb-60 {
-  margin-bottom: 60px;
+  margin-bottom: 60px !important;
 }
 
 .mb-80 {
-  margin-bottom: 80px;
+  margin-bottom: 80px !important;
 }
 
 .mb-120 {
-  margin-bottom: 120px;
+  margin-bottom: 120px !important;
 }
 
 .mb--60 {
-  margin-bottom: -60px;
+  margin-bottom: -60px !important;
 }
 
 .mb--120 {
-  margin-bottom: -120px;
+  margin-bottom: -120px !important;
 }
 
 .pt-20 {
-  padding-top: 20px;
+  padding-top: 20px !important;
 }
 
 .pt-30 {
-  padding-top: 30px;
+  padding-top: 30px !important;
 }
 
 .pt-40 {
-  padding-top: 40px;
+  padding-top: 40px !important;
 }
 
 .pt-50 {
-  padding-top: 50px;
+  padding-top: 50px !important;
 }
 
 .pt-60 {
-  padding-top: 60px;
+  padding-top: 60px !important;
 }
 
 .pt-80 {
-  padding-top: 80px;
+  padding-top: 80px !important;
 }
 
 .pt-110 {
-  padding-top: 110px;
+  padding-top: 110px !important;
 }
 
 .pt-115 {
-  padding-top: 115px;
+  padding-top: 115px !important;
 }
 
 .pt-120 {
-  padding-top: 120px;
+  padding-top: 120px !important;
 }
 
 .pt-142 {
-  padding-top: 142px;
+  padding-top: 142px !important;
 }
 
 .pb-20 {
-  padding-bottom: 20px;
+  padding-bottom: 20px !important;
 }
 
 .pb-30 {
-  padding-bottom: 30px;
+  padding-bottom: 30px !important;
 }
 
 .pb-40 {
-  padding-bottom: 40px;
+  padding-bottom: 40px !important;
 }
 
 .pb-50 {
-  padding-bottom: 50px;
+  padding-bottom: 50px !important;
 }
 
 .pb-60 {
-  padding-bottom: 60px;
+  padding-bottom: 60px !important;
 }
 
 .pb-80 {
-  padding-bottom: 80px;
+  padding-bottom: 80px !important;
 }
 
 .pb-90 {
-  padding-bottom: 90px;
+  padding-bottom: 90px !important;
 }
 
 .pb-110 {
-  padding-bottom: 110px;
+  padding-bottom: 110px !important;
 }
 
 .pb-115 {
-  padding-bottom: 115px;
+  padding-bottom: 115px !important;
 }
 
 .pb-120 {
-  padding-bottom: 120px;
+  padding-bottom: 120px !important;
 }
 
 .pl-5 {
-  padding-left: 5px;
+  padding-left: 5px !important;
 }
 
 .pl-10 {
-  padding-left: 10px;
+  padding-left: 10px !important;
 }
 
 .pl-15 {
-  padding-left: 15px;
+  padding-left: 15px !important;
 }
 
 .pl-20 {
-  padding-left: 20px;
+  padding-left: 20px !important;
 }
 
 .pl-30 {
-  padding-left: 30px;
+  padding-left: 30px !important;
 }
 
 .pr-5 {
-  padding-right: 5px;
+  padding-right: 5px !important;
 }
 
 .pr-10 {
-  padding-right: 10px;
+  padding-right: 10px !important;
 }
 
 .pr-15 {
-  padding-right: 15px;
+  padding-right: 15px !important;
 }
 
 .pr-20 {
-  padding-right: 20px;
+  padding-right: 20px !important;
 }
 
 .pr-30 {
-  padding-right: 30px;
+  padding-right: 30px !important;
 }
 
 /*--------------------------------------------------------------
@@ -3141,6 +3141,9 @@ h6 {
   color: #fff;
   background-color: transparent;
   font-size: 14px;
+}
+.mobile-nav__language select option{
+  color: black;
 }
 .mobile-nav__language .bootstrap-select > .dropdown-toggle {
   padding: 0;
